# hc-sonos

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: release.yml
config/: config.toml  config.toml.example
src/: bridge.rs  config.rs  discovery.rs  discovery_action.rs  events.rs  homecore.rs  logging.rs  main.rs  shared_state.rs  speaker.rs  subscription.rs
src/api/: content.rs  handlers.rs  mod.rs
