[workspace]

[package]
name        = "hc-sonos"
version     = "0.1.0"
edition     = "2021"
license     = "MIT OR Apache-2.0"
description = "Sonos speaker plugin for homeCore"
repository  = "https://github.com/homeCore-io/hc-sonos"

[[bin]]
name = "hc-sonos"
path = "src/main.rs"

[dependencies]
plugin-sdk-rs      = { git = "https://github.com/homeCore-io/hc-plugin-sdk-rs", branch = "main" }
hc-types           = { git = "https://github.com/homeCore-io/homeCore", branch = "main" }
hc-logging         = { git = "https://github.com/homeCore-io/homeCore", branch = "main" }
tokio              = { version = "1", features = ["full"] }
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
toml               = "0.8"
anyhow             = "1"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "registry"] }
tracing-appender   = "0.2"
flate2             = "1"
chrono             = "0.4"
sonor              = "2.0"
futures            = "0.3"
axum               = "0.7"
tower              = "0.4"
tower-http         = { version = "0.5", features = ["cors", "trace"] }
roxmltree          = "0.18"
